personservice/mongo-kubernetes-cluster6.yaml
apiVersion: v1
kind: Service
metadata:
  labels:    
     app: personservice
     version: "0.0.3"
  annotations:
     auth.istio.io/80: NONE
  name: personservice
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: personservice
    version: "0.0.3"
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:    
     app: personservice
     version: "0.0.3"
  annotations:
     auth.istio.io/80: NONE
  name: personservice-actuator
spec:
  ports:
  - name: actuatorhttp
    port: 8081
  selector:
    app: personservice
    version: "0.0.3"
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
   annotations:
      deployment.kubernetes.io/revision: "3"
   labels:
      app: personservice
      mf_version: "5"
   name: personservice   
spec:
   replicas: 2
   selector:
      matchLabels:
         app: personservice
   template:
      metadata:
         labels:    
            app: personservice
            version: "0.0.3"
         annotations:
            sidecar.istio.io/inject: "true"
      spec:    
         containers:
           - name: personservice
# changeme: Replace with pointer to your docker repository/container
             image: "arifcrtsap/mongokubernetes:0.0.3"
             resources:
                limits:
                   memory: 1Gi
             imagePullPolicy: Always              
             ports:
              - containerPort: 8080
                name: http
              - containerPort: 8081
                name: actuatorhttp
             livenessProbe:
                httpGet:
                   path: /actuator/health
                   port: 8081
                initialDelaySeconds: 60
                periodSeconds: 60
                failureThreshold: 3   
             readinessProbe:
                httpGet:
                   path: /actuator/ready
                   port: 8081
                periodSeconds: 30
                initialDelaySeconds: 20
                failureThreshold: 1
                successThreshold: 2                
             volumeMounts:
              - mountPath: /registration
                name: registrationfile
                readOnly: true
              - mountPath: /security
                name: kyma-certificate
                readOnly: true
         volumes:
          - name: registrationfile
            configMap:
              name: registrationfile 
              items:
               - key: registrationfile.json
                 path: registrationfile.json
          - name: kyma-certificate
            secret:
              secretName: kyma-certificate
