personservice/mongo-kubernetes-local1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:    
     app: personservice
     version: "0.0.3"
  annotations:
     auth.istio.io/80: NONE
  name: personservice
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: personservice
    version: "0.0.3"
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
   annotations:
      deployment.kubernetes.io/revision: "3"
   labels:
      app: personservice
      mf_version: "1"
   name: personservice   
spec:
   replicas: 1
   selector:
      matchLabels:
         app: personservice
   template:
      metadata:
         labels:    
            app: personservice
            version: "0.0.3"
         annotations:
            sidecar.istio.io/inject: "true"
      spec:    
         containers:
           - name: personservice
# changeme: Replace with pointer to your docker repository/container
             image: "andy008/mongokubernetes:0.0.3"
             resources:
                limits:
                   memory: 1Gi
             imagePullPolicy: Always              
             ports:
              - containerPort: 8080
                name: http
              - containerPort: 8081
                name: actuatorhttp
