personservice/personservice-actuator-service.yaml

apiVersion: v1
kind: Service
metadata:
  labels:    
     app: personservice
     version: "1.11.0"
  annotations:
     auth.istio.io/8081: NONE
  name: personservice-actuator
spec:
  ports:
  - name: actuatorhttp
    port: 8081
  selector:
    app: personservice
    version: "1.11.0"
  type: ClusterIP
