personservice/mongo-kubernetes-local3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: personservice
  name: personservice-internal
spec:
  hosts:
  - personservice.personservice.svc.cluster.local
  http:
  - match:
    - uri:
        regex: /.*
    route:
    - destination:
        host: personservice.personservice.svc.cluster.local
        port:
          number: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:    
     app: personservice
     version: "0.0.3"
  annotations:
     auth.istio.io/80: NONE
  name: personservice
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: personservice
    version: "0.0.3"
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
   annotations:
      deployment.kubernetes.io/revision: "3"
   labels:
      app: personservice
      mf_version: "3"
   name: personservice   
spec:
   replicas: 1
   selector:
      matchLabels:
         app: personservice
   template:
      metadata:
         labels:    
            app: personservice
            version: "0.0.3"
         annotations:
            sidecar.istio.io/inject: "true"
            traffic.sidecar.istio.io/includeInboundPorts: "8080"
      spec:    
         hostAliases:
# changeme: Replace with Minikube IP (command sudo minikube ip)       
          - ip: 192.168.218.139
            hostnames:
             - "gateway.kyma.local"
             - "connector-service.kyma.local"  
         containers:
           - name: personservice
# changeme: Replace with pointer to your docker repository/container
             image: "personservice/mongokubernetes:0.0.3"
             resources:
                limits:
                   memory: 512Mi
             imagePullPolicy: Always              
             ports:
              - containerPort: 8080
                name: http
              - containerPort: 8081
                name: actuatorhttp                
             volumeMounts:
              - mountPath: /registration
                name: registrationfile
                readOnly: true
         volumes:
          - name: registrationfile
            configMap:
              name: registrationfile 
              items:
               - key: registrationfile.json
                 path: registrationfile.json
